@@ -1,3 +1,8 @@
+TAG: gbseqload-4-1-1-1
+DATE: 07/23/2007
+STAFF: sc
+CHANGES: TR8092 - Removed reference to SeqRefAssocPair
+
 TAG: gbseqload-3-5-4-2
 DATE: 11/26/2007
 STAFF: sc
